# mlib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/mlib/core/: exceptions.hpp  operations.hpp  tensor.hpp
src/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: test_operations.cpp  test_tensor.cpp
